--- a/ActRec/ActRec.Android/ActRec.Android.csproj
+++ b/ActRec/ActRec.Android/ActRec.Android.csproj
@@ -85,6 +85,12 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
+    <Reference Include="Uniforms.Misc, Version=1.0.6116.38857, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Uniforms.Misc.0.9.1\lib\MonoAndroid10\Uniforms.Misc.dll</HintPath>
+    </Reference>
+    <Reference Include="Uniforms.Misc.Droid, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Uniforms.Misc.0.9.1\lib\MonoAndroid10\Uniforms.Misc.Droid.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Android.Support.Animated.Vector.Drawable, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Android.Support.Animated.Vector.Drawable.23.3.0\lib\MonoAndroid403\Xamarin.Android.Support.Animated.Vector.Drawable.dll</HintPath>
     </Reference>
