--- a/ActRec/ActRec.Android/packages.config
+++ b/ActRec/ActRec.Android/packages.config
@@ -4,6 +4,7 @@
   <package id="SkiaSharp" version="1.59.1" targetFramework="monoandroid71" />
   <package id="SkiaSharp.Views" version="1.59.1.1" targetFramework="monoandroid71" />
   <package id="SkiaSharp.Views.Forms" version="1.59.1.1" targetFramework="monoandroid71" />
+  <package id="Uniforms.Misc" version="0.9.1" targetFramework="monoandroid71" />
   <package id="Xam.Plugin.FilePicker" version="1.1.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
