--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -125,7 +125,7 @@
     <Compile Include="Source\Category.cs" />
     <Compile Include="Source\ActivityDatabase.cs" />
     <Compile Include="Source\ActivityDescriptor.cs" />
-    <Compile Include="Source\ActivityNameEntryBox.cs" />
+    <Compile Include="Source\View\ActivityNameEntryBox.cs" />
     <Compile Include="Source\ActivityRecommender.cs" />
     <Compile Include="Source\ActivityRequest.cs" />
     <Compile Include="Source\ActivitySkip.cs" />
