--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Source\View\BrowseInheritancesView.cs" />
     <Compile Include="Source\View\InstructionsLayout.cs" />
     <Compile Include="Source\View\ListParticipations_Layout.cs" />
+    <Compile Include="Source\View\LogViewer.cs" />
     <Compile Include="Source\View\MetricEditingLayout.cs" />
     <Compile Include="Source\View\OpenIssue_Layout.cs" />
     <Compile Include="Source\View\ParticipationComparisonMenu.cs" />
