--- a/ActRec/ActRec.iOS/Info.plist
+++ b/ActRec/ActRec.iOS/Info.plist
@@ -25,7 +25,7 @@
     <key>CFBundleDisplayName</key>
     <string>ActRec</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.ActRec</string>
+    <string>com.mathjeff.ActivityRecommender</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
