--- a/ActRec/ActRec.iOS/Info.plist
+++ b/ActRec/ActRec.iOS/Info.plist
@@ -34,5 +34,7 @@
     <string>ActRec</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>UIFileSharingEnabled</key>
+    <true/>
 </dict>
 </plist>
