--- a/ActRec/ActRec.iOS/Info.plist
+++ b/ActRec/ActRec.iOS/Info.plist
@@ -36,5 +36,7 @@
     <string>Assets.xcassets/AppIcon.appiconset</string>
     <key>UIFileSharingEnabled</key>
     <true/>
+    <key>LSSupportsOpeningDocumentsInPlace</key>
+    <true/>
 </dict>
 </plist>
