Making buttons on iOS visually respond to touch too

--- a/ActRec/ActRec.iOS/ActRec.iOS.csproj
+++ b/ActRec/ActRec.iOS/ActRec.iOS.csproj
@@ -167,5 +167,7 @@
       <Name>ActRec</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BundleResource Include="Resources\button_background.png" />
+  </ItemGroup>
 </Project>
