--- a/ActRec/ActRec.Android/Properties/AndroidManifest.xml
+++ b/ActRec/ActRec.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="7" android:versionName="1.1.8" package="com.mathjeff.ActRec">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-	<application android:label="ActRec.Android"></application>
+
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
+	<application
+		android:label="ActRec.Android"
+		android:requestLegacyExternalStorage="true">
+	</application>
+
 </manifest>
