Assigning custom fonts to the themes that the user chooses
so the user can choose a combination of font and color

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "deps/VisiPlacer"]
 	path = deps/VisiPlacer
 	url = ../VisiPlacer
+[submodule "deps/Uniforms-Misc"]
+	path = deps/Uniforms-Misc
+	url = ../Uniforms-Misc
+[submodule "deps/Fonts"]
+	path = deps/Fonts
+	url = ../Fonts
