--- a/ActRec/ActRec.iOS/ActRec.iOS.csproj
+++ b/ActRec/ActRec.iOS/ActRec.iOS.csproj
@@ -158,6 +158,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\..\deps\Uniforms-Misc\Uniforms.Misc.iOS\Uniforms.Misc.iOS.csproj">
+      <Project>{d13a4cca-6f79-4d18-9da0-a37163c0bc55}</Project>
+      <Name>Uniforms.Misc.iOS</Name>
+      <IsAppExtension>false</IsAppExtension>
+      <IsWatchApp>false</IsWatchApp>
+    </ProjectReference>
     <ProjectReference Include="..\..\deps\VisiPlacer\VisiPlacer.csproj">
       <Project>{AA997F58-2326-4CD7-A489-66193106F584}</Project>
       <Name>VisiPlacer</Name>
