--- a/ActRec/ActRec.Android/ActRec.Android.csproj
+++ b/ActRec/ActRec.Android/ActRec.Android.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\ButtonEffect.cs" />
     <Compile Include="Source\TextItemEffect.cs" />
   </ItemGroup>
   <ItemGroup>
