Switching from file export to sharing instead
to allow removing the requestLegacyExternalStorage permission

This makes the file location a little clearer (particularly for new users), but is also a little slower for users that just want to save a file occasionally

--- a/ActRec/ActRec.Android/Properties/AndroidManifest.xml
+++ b/ActRec/ActRec.Android/Properties/AndroidManifest.xml
@@ -6,8 +6,7 @@
 
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
 	<application
-		android:label="ActRec.Android"
-		android:requestLegacyExternalStorage="true">
+		android:label="ActRec.Android">
 	</application>
 
 </manifest>
