--- a/ActRec/ActRec.iOS/ActRec.iOS.csproj
+++ b/ActRec/ActRec.iOS/ActRec.iOS.csproj
@@ -51,7 +51,7 @@
     <ConsolePause>false</ConsolePause>
     <MtouchArch>ARM64</MtouchArch>
     <CodesignProvision>iOS Team Provisioning Profile: *</CodesignProvision>
-    <CodesignKey>Apple Development: Jeffry Gaston (R4Z44WB24C)</CodesignKey>
+    <!--<CodesignKey>Apple Development: Jeffry Gaston (R4Z44WB24C)</CodesignKey>-->
     <!--<CodesignKey>iPhone Developer</CodesignKey>-->
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
@@ -64,10 +64,11 @@
     <WarningLevel>4</WarningLevel>
     <MtouchArch>ARM64</MtouchArch>
     <ConsolePause>false</ConsolePause>
-    <CodesignProvision>iOS Team Provisioning Profile: *</CodesignProvision>
-    <CodesignKey>Apple Development: Jeffry Gaston (R4Z44WB24C)</CodesignKey>
+    <CodesignProvision>ActivityRecommender-2021-02-07</CodesignProvision>
+    <!--<CodesignKey>Apple Development: Jeffry Gaston (R4Z44WB24C)</CodesignKey>-->
     <!--<CodesignKey>iPhone Developer</CodesignKey>-->
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <CodesignKey>Apple Distribution: Jeffry Gaston (T4V99M34DZ)</CodesignKey>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
     <DebugType>none</DebugType>
@@ -78,8 +79,8 @@
     <ConsolePause>False</ConsolePause>
     <MtouchArch>ARM64</MtouchArch>
     <BuildIpa>True</BuildIpa>
-    <CodesignProvision>Automatic:AdHoc</CodesignProvision>
-    <CodesignKey>iPhone Distribution</CodesignKey>
+    <CodesignProvision>ActivityRecommender-2021-02-07</CodesignProvision>
+    <CodesignKey>Apple Distribution: Jeffry Gaston (T4V99M34DZ)</CodesignKey>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
