--- a/ActRec/ActRec.Android/Properties/AndroidManifest.xml
+++ b/ActRec/ActRec.Android/Properties/AndroidManifest.xml
@@ -3,10 +3,6 @@
 
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
-	<application
-		android:label="ActRec.Android">
-	</application>
-
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34" />
+	<application android:label="ActRec.Android"></application>
 </manifest>
