--- a/ActRec/ActRec/ActRec.csproj
+++ b/ActRec/ActRec/ActRec.csproj
@@ -1,7 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
+    <UseMaui>true</UseMaui>
+    <RootNamespace>ActRec</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,19 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="PCLStorage" Version="1.0.2" />
-    <PackageReference Include="SkiaSharp" Version="2.88.3" />
-    <PackageReference Include="SkiaSharp.Views.Forms" Version="2.88.3" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="3.119.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\deps\AdaptiveInterpolator\AdaptiveInterpolator.csproj" />
     <ProjectReference Include="..\..\deps\VisiPlacer\VisiPlacer\VisiPlacer.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\" />
   </ItemGroup>
 </Project>
